--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "file-loader": "^0.9.0",
+    "prop-types": "^15.5.8",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
@@ -25,6 +26,7 @@
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
+    "redux-form": "^6.6.3",
     "redux-logger": "^2.10.2",
     "redux-thunk": "^2.2.0"
   },
